# ecust-electricity-statistics

./: .gitignore  LICENSE  README.md  config.ini  config.toml  data.js  data.json  index.html  integration_test.sh  main.py  pyproject.toml  requirements.txt  statistics.html  utils.py
.github/workflows/: check.yml  main.yml
