[tool.poetry]
name = "ecust-electricity-statistics"
version = "1.2.0"
description = "华东理工大学（华理）电费统计"
authors = ["lxl66566 <lxl66566@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
